# thesis-msc

./: .baldr.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  conandata.yml  conanfile.py
benchmark/: CMakeLists.txt  bench_utils.cc  sim.xyz
cmake/: dependencies.cmake  settings.cmake
data/: perception.config.json  perception.config.yaml  simulator.config.json  simulator.config.yaml  slam.config.yaml
data/garage_1mps_speed_10cm_accuracy/: test_fn1.xyz  test_fn10.xyz  test_fn11.xyz  test_fn12.xyz  test_fn13.xyz  test_fn14.xyz  test_fn15.xyz  test_fn16.xyz  test_fn17.xyz  test_fn18.xyz  test_fn19.xyz  test_fn2.xyz  test_fn20.xyz  test_fn21.xyz  test_fn22.xyz  test_fn23.xyz  test_fn24.xyz  test_fn25.xyz  test_fn26.xyz  test_fn27.xyz  test_fn28.xyz  test_fn29.xyz  test_fn3.xyz  test_fn30.xyz  test_fn31.xyz  test_fn32.xyz  test_fn33.xyz  test_fn34.xyz  test_fn35.xyz  test_fn36.xyz  test_fn37.xyz  test_fn38.xyz  test_fn39.xyz  test_fn4.xyz  test_fn40.xyz  test_fn5.xyz  test_fn6.xyz  test_fn7.xyz  test_fn8.xyz  test_fn9.xyz
data/garage_1mps_speed_1cm_accuracy/: test_fn1.xyz  test_fn10.xyz  test_fn11.xyz  test_fn12.xyz  test_fn13.xyz  test_fn14.xyz  test_fn15.xyz  test_fn16.xyz  test_fn17.xyz  test_fn18.xyz  test_fn19.xyz  test_fn2.xyz  test_fn20.xyz  test_fn21.xyz  test_fn22.xyz  test_fn23.xyz  test_fn24.xyz  test_fn25.xyz  test_fn26.xyz  test_fn27.xyz  test_fn28.xyz  test_fn29.xyz  test_fn3.xyz  test_fn30.xyz  test_fn31.xyz  test_fn32.xyz  test_fn33.xyz  test_fn34.xyz  test_fn35.xyz  test_fn36.xyz  test_fn37.xyz  test_fn38.xyz  test_fn39.xyz  test_fn4.xyz  test_fn40.xyz  test_fn5.xyz  test_fn6.xyz  test_fn7.xyz  test_fn8.xyz  test_fn9.xyz
src/: CMakeLists.txt  circle.hh  cylinder.hh  main.cc  ransac.hh  types.hh  utils.hh
src/eval/: eval.py  utils.py  vec.py
src/perception/: CMakeLists.txt  circle.hh  logging.hh  main.cc  perception.hh  ransac.hh  types.hh  utils.hh
src/simulator/: CMakeLists.txt  lidar.hh  logging.hh  main.cc  simulation.hh  types.hh  utils.hh
src/slam/: CMakeLists.txt  catalog.hh  logging.hh  main.cc  slam.hh  types.hh  utils.hh
tools/: circle-fitting.py  cylinder-plot.py  eval.py  lidar-plot.py  n_eval.py  plane-filtering.py  plane-plot.py  ply-plot.py  sphere-plot.py  voxel-grid.py
unit-tests/: CMakeLists.txt  catalog.cc  utils.cc
(+697 files in other folders)
